fixes for opera

--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -22,7 +22,10 @@
 
 {% block content %}
     <div id="video" class="section video-bg-container" style="background-image: url({% static 'main/img/river.jpg' %})">
-        <video class="video-bg" src="{% static 'main/img/river.mp4' %}" autoplay="" loop="" preload="auto" muted=""></video>
+        <video class="video-bg" autoplay="" loop="" preload="auto" muted="">
+            <source src="{% static 'main/img/river.mp4' %}">
+            <source src="{% static 'main/img/river.ogv' %}">
+        </video>
 
         <div class="inner">
             <div class="grid">
