--- a/src/static/scss/slider/plugins/controls.scss
+++ b/src/static/scss/slider/plugins/controls.scss
@@ -22,7 +22,7 @@
       &:hover {
         &:before {
           background-position: left -40px;
-          @include transform(translate(-50%, -50%) scale(1.2));
+          @include transform(translate3d(-50%, -50%, 0) scale(1.2));
         }
       }
 
@@ -35,7 +35,7 @@
       &:hover {
         &:before {
           background-position: right -40px;
-          @include transform(translate(-50%, -50%) scale(1.2));
+          @include transform(translate3d(-50%, -50%, 0) scale(1.2));
         }
       }
 
@@ -53,10 +53,11 @@
       height: 40px;
       background: url(../arrows.png) no-repeat;
       background-size: 200%;
-      @include transform(translate(-50%, -50%));
+      @include transform(translate3d(-50%, -50%, 0) scale(1));
       @include transition-property(-webkit-transform, transform);
       @include transition-duration(0.3s);
       @include transition-timing-function(linear);
+      @include transform-origin(0, 0);
     }
   }
 }
