prepare inlines js

--- a/src/static/scss/inlines.scss
+++ b/src/static/scss/inlines.scss
@@ -1,12 +1,12 @@
-// Базовые стили для inline-форм
-.empty-row {
-  display: none;
-}
-
-.add-row {
-  cursor: pointer;
-}
-
-.delete-row {
-  @extend .add-row;
-}
+//// Базовые стили для inline-форм
+//.empty-row {
+//  display: none;
+//}
+//
+//.add-row {
+//  cursor: pointer;
+//}
+//
+//.delete-row {
+//  @extend .add-row;
+//}
