--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -117,6 +117,8 @@
 
   <div id="form">
     <form method="post">
+      {% csrf_token %}
+
       <div class="grid">
         <div class="gc-full gc-alone">
           {% for field in form %}
@@ -145,9 +147,10 @@
                 {{ form.name }}
                 {{ form.name.errors }}
               </fieldset>
-              <input type="submit" value="Send">
             </div>
           {% endfor %}
+
+          <input type="submit" value="Send">
         </div>
       </div>
     </form>
