--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -131,24 +131,58 @@
         </div>
 
         <div class="gc-full gc-alone">
-          {{ formset.management_form }}
-          {% for form in formset %}
-            <div class="formset">
-              {% if formset.can_delete %}
-                {{ form.DELETE.as_hidden }}
-              {% endif %}
 
-              {% if formset.can_order %}
-                {{ form.ORDER.as_hidden }}
-              {% endif %}
 
-              <fieldset>
+          <div class="formset">
+            {{ formset.management_form }}
+
+            <div class="forms">
+              {% for form in formset %}
+                <div class="form">
+                  {{ form.id.as_hidden }}
+
+                  {% if formset.can_delete %}
+                    {{ form.DELETE.as_hidden }}
+                  {% endif %}
+
+                  {{ form.name.label_tag }}
+                  {{ form.name }}
+                  {{ form.name.errors }}
+                </div>
+              {% endfor %}
+            </div>
+
+            <div class="form empty-form">
+              {% with form=formset.empty_form %}
+                {{ form.id.as_hidden }}
+
+                {% if formset.can_delete %}
+                  {{ form.DELETE.as_hidden }}
+                {% endif %}
+
                 {{ form.name.label_tag }}
                 {{ form.name }}
                 {{ form.name.errors }}
-              </fieldset>
+              {% endwith %}
             </div>
-          {% endfor %}
+          </div>
+
+
+          <div class="empty-formset" style="display: none">
+            {% if formset.can_delete %}
+              {{ formset.empty_form.DELETE.as_hidden }}
+            {% endif %}
+
+            {% if formset.can_order %}
+              {{ formset.empty_form.ORDER.as_hidden }}
+            {% endif %}
+
+            <fieldset>
+              {{ formset.empty_form.name.label_tag }}
+              {{ formset.empty_form.name }}
+              {{ formset.empty_form.name.errors }}
+            </fieldset>
+          </div>
 
           <input type="submit" value="Send">
         </div>
