--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -83,11 +83,9 @@
           <div class="slider">
             {% for item in config.gallery.image_items %}
               <img class="slide {% if forloop.counter == 1 %}active{% endif %}"
-{#                  {% if forloop.counter == 3 or forloop.counter == 4 %}#}
-{#                   style="width: 30%;"#}
-{#                  {% elif forloop.counter == 5 or forloop.counter == 6 %}#}
-{#                   style="height: 500px;"#}
-{#                  {% endif %}#}
+                  {% if forloop.counter == 7 or forloop.counter == 8 %}
+                   style="height: 200px;"
+                  {% endif %}
                    src="{{ item.image.normal.url }}"
                    alt=""
                    width="{{ item.image.normal.dimensions.0 }}"
