slider check oneSlide

--- a/src/static/scss/slider/plugins/navigation.scss
+++ b/src/static/scss/slider/plugins/navigation.scss
@@ -59,5 +59,9 @@ $dot_active_color: rgba(#3B91CA, 1);
         }
       }
     }
+
+    &.slider-navigation-disabled {
+      display: none;
+    }
   }
 }
