--- a/src/apps/users/templates/users/profile.html
+++ b/src/apps/users/templates/users/profile.html
@@ -5,40 +5,41 @@
 {% load pipeline %}
 
 {% block static_head %}
-    {{ block.super }}
-    {% stylesheet 'users-profile' %}
+  {{ block.super }}
+  {% stylesheet 'users-profile' %}
 {% endblock static_head %}
 
 {% block static_js %}
-    {{ block.super }}
-    {% javascript 'users-profile' %}
+  {{ block.super }}
+  {% javascript 'users-profile' %}
 {% endblock static_js %}
 
 
 {% block content %}
-    <div id="profile">
-        <div class="grid">
-            <div class="gc-full gc-alone">
-                <h1 class="title-h1">{% with username=profile_user.username %}{% blocktrans %}Profile of «{{ username }}»{% endblocktrans %}{% endwith %}</h1>
+  <div id="profile">
+    <div class="grid">
+      <div class="gc-full gc-alone">
+        <h1 class="title-h1">{% with username=profile_user.username %}{% blocktrans %}Profile of «{{ username }}»
+        {% endblocktrans %}{% endwith %}</h1>
 
-                {% include 'users/profile_avatar.html' %}
-                <div class="profile-info">
-                    {% with fullname=profile_user.get_full_name %}
-                        {% if fullname %}
-                            <p><b>{% trans 'Name' %}</b>: {{ fullname }}</p>
-                        {% endif %}
-                    {% endwith %}
-                    {% with email=profile_user.email %}
-                        {% if email %}
-                            <p><b>E-mail</b>: {{ email }}</p>
-                        {% endif %}
-                    {% endwith %}
-                    <p><b>{% trans 'Last login' %}</b>: {{ profile_user.last_login|shortdate }}</p>
-                    {% if profile_user == request.user %}
-                        <a href="{% url 'users:reset_password' %}" class="btn">{% trans 'Change password' %}</a>
-                    {% endif %}
-                </div>
-            </div>
+        {% include 'users/profile_avatar.html' %}
+        <div class="profile-info">
+          {% with fullname=profile_user.get_full_name %}
+            {% if fullname %}
+              <p><b>{% trans 'Name' %}</b>: {{ fullname }}</p>
+            {% endif %}
+          {% endwith %}
+          {% with email=profile_user.email %}
+            {% if email %}
+              <p><b>E-mail</b>: {{ email }}</p>
+            {% endif %}
+          {% endwith %}
+          <p><b>{% trans 'Last login' %}</b>: {{ profile_user.last_login|shortdate }}</p>
+          {% if profile_user == request.user %}
+            <a href="{% url 'users:reset_password' %}" class="btn">{% trans 'Change password' %}</a>
+          {% endif %}
         </div>
+      </div>
     </div>
+  </div>
 {% endblock content %}
