--- a/src/apps_common/gallery/templates/gallery/admin/gallery.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery.html
@@ -1,83 +1,90 @@
 {% load i18n %}
 
 <style>
-    #add_id_{{ name }} {
-        display: none;
-    }
-    #gallery-{{ name }} .gallery-item {
-        width: {{ admin_variation.size.0 }}px;
-        height: {{ admin_variation.size.1 }}px;
-    }
+  #add_id_{{ name }} {
+    display: none;
+  }
+
+  #gallery-{{ name }} .gallery-item {
+    width: {{ admin_variation.size.0 }}px;
+    height: {{ admin_variation.size.1 }}px;
+  }
 </style>
 
 <script>
-    var admin_gallery_create = "{% url 'admin_gallery:create' %}";
-    var admin_gallery_delete = "{% url 'admin_gallery:delete' %}";
-    var admin_gallery_upload = "{% url 'admin_gallery:upload' %}";
-    var admin_gallery_upload_video = "{% url 'admin_gallery:upload_video' %}";
-    var admin_gallery_sort = "{% url 'admin_gallery:sort' %}";
-    var admin_gallery_delete_item = "{% url 'admin_gallery:delete_item' %}";
-    var admin_gallery_rotate_item = "{% url 'admin_gallery:rotate_item' %}";
-    var admin_gallery_crop_item = "{% url 'admin_gallery:crop_item' %}";
-    var admin_gallery_get_description = "{% url 'admin_gallery:get_description' %}";
-    var admin_gallery_set_description = "{% url 'admin_gallery:set_description' %}";
+  var admin_gallery_create = "{% url 'admin_gallery:create' %}";
+  var admin_gallery_delete = "{% url 'admin_gallery:delete' %}";
+  var admin_gallery_upload = "{% url 'admin_gallery:upload' %}";
+  var admin_gallery_upload_video = "{% url 'admin_gallery:upload_video' %}";
+  var admin_gallery_sort = "{% url 'admin_gallery:sort' %}";
+  var admin_gallery_delete_item = "{% url 'admin_gallery:delete_item' %}";
+  var admin_gallery_rotate_item = "{% url 'admin_gallery:rotate_item' %}";
+  var admin_gallery_crop_item = "{% url 'admin_gallery:crop_item' %}";
+  var admin_gallery_get_description = "{% url 'admin_gallery:get_description' %}";
+  var admin_gallery_set_description = "{% url 'admin_gallery:set_description' %}";
 </script>
 
 {% block gallery %}
-<div class="gallery gallery-standart" id="gallery-{{ name }}"
-     data-max_source="{{ max_source|join:'x' }}" data-min_dimensions="{{ min_dimensions|join:'x' }}"
-     data-max_dimensions="{{ max_dimensions|join:'x' }}" data-max_size="{{ max_size }}" data-aspects="{{ aspects }}">
+  <div class="gallery gallery-standart" id="gallery-{{ name }}"
+       data-max_source="{{ max_source|join:'x' }}" data-min_dimensions="{{ min_dimensions|join:'x' }}"
+       data-max_dimensions="{{ max_dimensions|join:'x' }}" data-max_size="{{ max_size }}" data-aspects="{{ aspects }}">
     {% block content %}
-        <input type="hidden" class="app_label" name="app_label" value="{{ app_label }}"/>
-        <input type="hidden" class="model_name" name="model_name" value="{{ model_name }}"/>
-        <input type="hidden" class="gallery_id" name="{{ name }}" id="id_{{ name }}" value="{{ gallery.pk|default:"" }}"/>
+      <input type="hidden" class="app_label" name="app_label" value="{{ app_label }}"/>
+      <input type="hidden" class="model_name" name="model_name" value="{{ model_name }}"/>
+      <input type="hidden" class="gallery_id" name="{{ name }}" id="id_{{ name }}" value="{{ gallery.pk|default:"" }}"/>
 
-        <div class="gallery-wrapper">
-            {% if gallery %}
-                {% include gallery_model.ADMIN_TEMPLATE_ITEMS %}
-            {% else %}
-                {% include gallery_model.ADMIN_TEMPLATE_EMPTY %}
-            {% endif %}
-        </div>
+      <div class="gallery-wrapper">
+        {% if gallery %}
+          {% include gallery_model.ADMIN_TEMPLATE_ITEMS %}
+        {% else %}
+          {% include gallery_model.ADMIN_TEMPLATE_EMPTY %}
+        {% endif %}
+      </div>
 
-        {% block templates %}
-            <script id="{{ name }}_image_template" type="text/template">
-                <div class="gallery-item gallery-item-image"
-                     style="width:{{ admin_variation.size.0 }}px; height:{{ admin_variation.size.1 }}px;">
-                    <input type="hidden" class="item-id" value=""/>
-                    <a target="_blank" class="item-show" style="display:none;">
-                        <img/>
-                    </a>
-                    <div class="item-preloader">
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <span class="item-controls">
-                        <input type="checkbox" name="gallery-item" class="check-box" value="">
-                        <a class="icon-edit item-crop" title="{% trans 'Crop image' %}"></a>
-                        <a class="icon-repeat item-rotate-left" title="{% trans 'Rotate by 90 degrees counterclockwise' %}"></a>
-                        <a class="icon-repeat item-rotate-right" title="{% trans 'Rotate by 90 degrees clockwise' %}"></a>
-                        <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
-                        <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
-                    </span>
-                </div>
-            </script>
-            <script id="{{ name }}_video_link_template" type="text/template">
-                <div class="gallery-item gallery-item-video-link">
-                    <input type="hidden" class="item-id" value=""/>
-                    <a target="_blank" class="item-show">
-                        <span class="inner">
-                            <img/>
-                        </span>
-                    </a>
-                    <span class="item-controls">
-                        <input type="checkbox" name="gallery-item" class="check-box" value="">
-                        <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
-                    </span>
-                </div>
-            </script>
-        {% endblock templates %}
+      {% block templates %}
+        <script id="{{ name }}_image_template" type="text/template">
+          <div class="gallery-item gallery-item-image"
+               style="width:{{ admin_variation.size.0 }}px; height:{{ admin_variation.size.1 }}px;">
+            <input type="hidden" class="item-id" value=""/>
+            <a target="_blank" class="item-show" style="display:none;">
+              <img/>
+            </a>
+
+            <div class="item-preloader">
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                     aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <span class="item-controls">
+                <input type="checkbox" name="gallery-item" class="check-box" value="">
+                <a class="icon-edit item-crop" title="{% trans 'Crop image' %}"></a>
+                <a class="icon-repeat item-rotate-left"
+                   title="{% trans 'Rotate by 90 degrees counterclockwise' %}"></a>
+                <a class="icon-repeat item-rotate-right"
+                   title="{% trans 'Rotate by 90 degrees clockwise' %}"></a>
+                <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
+                <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
+            </span>
+          </div>
+        </script>
+        <script id="{{ name }}_video_link_template" type="text/template">
+          <div class="gallery-item gallery-item-video-link">
+            <input type="hidden" class="item-id" value=""/>
+            <a target="_blank" class="item-show">
+              <span class="inner">
+                  <img/>
+              </span>
+            </a>
+
+            <span class="item-controls">
+                <input type="checkbox" name="gallery-item" class="check-box" value="">
+                <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
+            </span>
+          </div>
+        </script>
+      {% endblock templates %}
     {% endblock content %}
-</div>
+  </div>
 {% endblock gallery %}
