--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -41,6 +41,14 @@
     </div>
   </div>
 
+  <div id="sticky_example">
+    <div class="grid">
+      <div class="gc-full gc-alone">
+        <div class="yellow"></div>
+      </div>
+    </div>
+  </div>
+
   <div id="parallax_sample">
     <div class="parallax" style="background-image: url({% static 'main/img/background.jpeg' %})"></div>
 
