--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -45,6 +45,21 @@
   }
 }
 
+#sticky_example {
+  background: black;
+
+  .gc-full {
+    height: 800px;
+    padding-top: 1px;
+  }
+
+  .yellow {
+    width: 100px;
+    height: 100px;
+    margin: auto;
+  }
+}
+
 #parallax_sample {
   position: relative;
   height: 600px;
