--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -68,13 +68,14 @@ p {
   overflow: hidden;
   display: table;
   width: 100%;
-  height: 768px; // for old
-  height: 100vh;
   color: #FFFFFF;
   text-align: center;
-  background: no-repeat center #000000;
-  background-size: cover;
 
+  &.section-full-height {
+    height: 768px; // for old
+    height: 100vh;
+  }
+  
   .section-image {
     position: absolute;
     left: 50%;
@@ -108,13 +109,9 @@ p {
   .section-inner {
     position: relative;
     display: table-cell;
-    padding-top: 150px;
     z-index: 5;
     vertical-align: middle;
     @include border-box;
     @include no_fontsize;
-    @include media_interval(0, $media768) {
-      padding-top: 110px;
-    }
   }
 }
