dump + fix section styles

--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -21,7 +21,7 @@
 
 
 {% block content %}
-  <div id="video" class="section">
+  <div id="video" class="section section-full-height">
     <img src="{{ config.header_background.desktop.url }}" class="section-image"
          srcset="{{ config.header_background.desktop.srcset }}, {{ config.header_background.mobile.srcset }}"
          sizes="100vw">
