--- a/src/static/scss/header.scss
+++ b/src/static/scss/header.scss
@@ -21,7 +21,39 @@ header {
 
   .menu-wrapper {
     text-align: center;
+    @include clearfix;
   }
+
+  .langs {
+    float: right;
+    margin-top: 3px;
+    @include media_interval(0, $media1024) {
+      margin-top: 4px;
+      margin-right: 20px;
+    }
+  }
+
+  //.langs-wrapper {
+  //  float: right;
+  //  height: 27px;
+  //  @include valign_after;
+  //  @include no_fontsize;
+  //  @include media_interval(0, $media1024) {
+  //    float: none;
+  //    height: auto;
+  //    display: inline-block;
+  //    vertical-align: middle;
+  //  }
+  //
+  //  .langs {
+  //    margin-left: 20px;
+  //    vertical-align: middle;
+  //    @include media_interval(0, $media1024) {
+  //      margin-left: 0;
+  //      margin-right: 20px;
+  //    }
+  //  }
+  //}
 }
 
 #logo {
