--- a/src/apps_common/multilanguage/static/multilanguage/scss/multilanguage.scss
+++ b/src/apps_common/multilanguage/static/multilanguage/scss/multilanguage.scss
@@ -3,48 +3,18 @@
 .langs {
   display: inline-block;
   position: relative;
-  vertical-align: middle;
   @include no_fontsize;
 
-  .flag {
-    display: block;
-    width: 41px;
-    height: 27px;
-    background: url(../img/flag-sprite.svg) no-repeat 0 0;
-    background-size: 100% auto;
+  .lang {
+    display: inline-block;
+    color: #000000;
+    padding: 4px;
+    line-height: 1;
+    text-transform: uppercase;
+    @include font-size(12px);
 
-    &.en-US {
-      background-position: 0 99.79591836734694%;
-    }
-    &.ru-RU {
-      background-position: 0 85.71224489795918%;
-    }
-  }
-
-  ul {
-    position: absolute;
-    left: 0;
-    top: 100%;
-    visibility: hidden;
-    @include opacity(0);
-    @include transition(opacity 0.3s 0s, visibility 0s 0.3s);
-
-    li {
-      padding: 8px 0 0;
-      @include opacity(1);
-      @include transition(opacity 0.3s);
-
-      &:hover {
-        @include opacity(0.8);
-      }
-    }
-  }
-
-  &:hover {
-    ul {
-      visibility: visible;
-      @include opacity(1);
-      @include transition(opacity 0.3s 0s, visibility 0s 0s);
+    &.active {
+      background-color: #A0A0A0;
     }
   }
 }
