--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -63,7 +63,7 @@
   </div>
 
   <div id="parallax_sample">
-    <div class="parallax" style="background-image: url({% static 'main/img/background.jpeg' %})"></div>
+    <img class="parallax" src="{% static 'main/img/background.jpeg' %}">
 
     <div class="appear-block grid">
       <div class="yellow gc-wide-2 gc-2 gc-tablet-4"></div>
