--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -81,6 +81,7 @@ p {
     position: absolute;
     left: 50%;
     top: 50%;
+    height: 1%;
     min-width: 100%;
     min-height: 100%;
     z-index: 2;
@@ -91,6 +92,7 @@ p {
     position: absolute;
     left: 50%;
     top: 50%;
+    height: 1%;
     min-width: 100%;
     min-height: 100%;
     z-index: 3;
