--- a/src/libs/ckeditor/static/ckeditor/css/ckeditor.css
+++ b/src/libs/ckeditor/static/ckeditor/css/ckeditor.css
@@ -2,6 +2,10 @@ html {
     min-height: 100%
 }
 
+p img {
+    max-width: 100%;
+}
+
 .page-images, .page-video {
     font-size: 14px;
     color: #404040;
