--- a/src/static/scss/mixins/_linear_gradient.scss
+++ b/src/static/scss/mixins/_linear_gradient.scss
@@ -31,13 +31,21 @@
 }
 
 @mixin linear-gradient($direction, $color-stops...) {
-  background: nth(nth($color-stops, 1), 1);
-  background: -webkit-linear-gradient(legacy-direction($direction), $color-stops);
-  background: linear-gradient($direction, $color-stops);
+  background-image: nth(nth($color-stops, 1), 1);
+  background-image: -webkit-linear-gradient(legacy-direction($direction), $color-stops);
+  background-image: linear-gradient($direction, $color-stops);
 }
 
 @mixin repeating-linear-gradient($direction, $color-stops...) {
-  background: nth(nth($color-stops, 1), 1);
-  background: -webkit-repeating-linear-gradient(legacy-direction($direction), $color-stops);
-  background: repeating-linear-gradient($direction, $color-stops);
+  background-image: nth(nth($color-stops, 1), 1);
+  background-image: -webkit-repeating-linear-gradient(legacy-direction($direction), $color-stops);
+  background-image: repeating-linear-gradient($direction, $color-stops);
+}
+
+@mixin radial-gradient($args...) {
+  background-image: -moz-radial-gradient($args);
+  background-image: -webkit-radial-gradient($args);
+  background-image: -o-radial-gradient($args);
+  background-image: -ms-radial-gradient($args);
+  background-image: radial-gradient($args);
 }
