--- a/src/static/admin/css/admin_fixes.css
+++ b/src/static/admin/css/admin_fixes.css
@@ -9,12 +9,10 @@
     box-sizing: border-box;
 }
 
-.url {
-    a {
-        word-break: break-word;
-        line-height: 1.4;
-        display: inline-block;
-    }
+.url a {
+    word-break : break-word;
+    line-height: 1.4;
+    display: inline-block;
 }
 
 /* Admin table */
