--- a/src/apps_common/seo/static/seo/scss/block.scss
+++ b/src/apps_common/seo/static/seo/scss/block.scss
@@ -25,7 +25,7 @@
   .short-text {
     &:after {
       content: '>';
-      font-family: Tahoma;
+      font-family: Tahoma, sans-serif;
       line-height: 1;
       color: rgba(255, 255, 255, 0.8);
       @include font-size(8px);
