--- a/src/apps_common/seo/templates/seo/block.html
+++ b/src/apps_common/seo/templates/seo/block.html
@@ -3,10 +3,15 @@
 <div class="seo-text">
   <div class="grid">
     <div class="gc">
-      <div class="title title-h2">{{ instance.header }}</div>
+
+      {% if instance.header %}
+        <div class="title title-h2">{{ instance.header }}</div>
+      {% endif %}
+
       <div class="text text-styles">
         {{ instance.text|paragraphs|typograf|safe }}
       </div>
+    
     </div>
   </div>
 </div>
