--- a/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery_items.html
@@ -22,7 +22,7 @@
 
         <input type="hidden" class="item-id" value="{{ item.id }}"/>
 
-        <a {% if item.browse_url %}href="{{ item.browse_url }}"{% endif %} target="_blank" class="item-show">
+        <a {% if item.show_url %}href="{{ item.show_url }}"{% endif %} target="_blank" class="item-show">
           {% with variation_field=item.image|variation_field:item.ADMIN_VARIATION %}
             {% if variation_field %}
               <img src="{{ variation_field.url }}">
@@ -43,7 +43,7 @@
     {% elif item.is_video_link %}
       <div class="gallery-item gallery-item-video-link">
         <input type="hidden" class="item-id" value="{{ item.id }}"/>
-        <a href="{{ item.browse_url }}" target="_blank" class="item-show">
+        <a href="{{ item.show_url }}" target="_blank" class="item-show">
           <span class="inner">
               <img src="{{ item.video_preview }}">
           </span>
