--- a/src/apps_common/gallery/templates/gallery/gallery.html
+++ b/src/apps_common/gallery/templates/gallery/gallery.html
@@ -5,8 +5,8 @@
         <img src="{{ item.image.small.url }}" alt="">
       </div>
     {% elif item.is_video_link %}
-      <div class="gallery-item gallery-item-video-link" data-provider="{{ item.video_provider }}"
-           data-key="{{ item.video_key }}">
+      <div class="gallery-item gallery-item-video-link" data-provider="{{ item.provider.name }}"
+           data-key="{{ item.video.key }}">
         <div class="inner">
           <img src="{{ item.video_preview }}" alt="">
         </div>
